--- a/src/components/ShowHide/index.css
+++ b/src/components/ShowHide/index.css
@@ -10,7 +10,6 @@
 .content-container {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -21,7 +20,14 @@
   text-align: center;
 }
 
-.show-hide-name-container {
+.show-hide-names-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.show-hide-single-name-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
