--- a/src/components/ShowHide/index.css
+++ b/src/components/ShowHide/index.css
@@ -33,7 +33,7 @@
   justify-content: center;
   align-items: center;
   width: 50vw;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
@@ -44,7 +44,7 @@
   border-radius: 0.6rem;
   background-color: #ffffff;
   font-size: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
   border: none;
 }
 
@@ -54,16 +54,57 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3rem;
+  padding: 1.5rem 7rem;
+  margin: 0;
+}
+
+.hide-container {
+  display: transparent;
+  background-color: inherit;
 }
 
 .name-text {
   font-size: 1.5rem;
+  margin: 0;
 }
 
 @media (min-width: 768px) {
+  .content-header {
+    font-size: 2rem;
+  }
+
   .show-hide-single-name-container {
-    width: 20vw;
+    width: 25vw;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+
+  .show-hide-name-button {
+    padding: 0.5rem 1.2rem;
+    font-size: 0.8rem;
+    margin-bottom: 1.3rem;
+  }
+
+  .name-container {
+    padding: 2rem 5.5rem;
+  }
+
+  .name-text {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 900px) {
+  .show-hide-single-name-container {
+    width: 30vw;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+}
+
+@media (min-width: 1100px) {
+  .show-hide-single-name-container {
+    width: 27vw;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
   }
